# alertpaca

./: CLAUDE.md  Cargo.toml  README.md  justfile  llms.txt
src/: config.rs  exitcode.rs  main.rs  mcpserver.rs  notify.rs  output.rs  state.rs
src/checks/: backups.rs  certificates.rs  cron.rs  dns.rs  endpoints.rs  mod.rs  ntp.rs  ports.rs  services.rs  system.rs  updates.rs
src/tui/: mod.rs  render.rs
