[package]
name = "alertpaca"
version = "0.3.0"
edition = "2024"
description = "Proactive server health checker — what's about to go wrong?"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.33"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
x509-parser = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
